[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kegtron"
version = "0.1.0"
description = "Python API for Kegtron BLE keg monitoring devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ryan Warren" }
]
keywords = ["kegtron", "ble", "bluetooth", "keg", "beer", "homebrewing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ryanwarren/kegtron-api"
Documentation = "https://github.com/ryanwarren/kegtron-api#readme"
Repository = "https://github.com/ryanwarren/kegtron-api"
Issues = "https://github.com/ryanwarren/kegtron-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kegtron"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/kegtron"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
